2006-11-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-api.h
	* plug-ins/pygimp/pygimp.h
	* plug-ins/pygimp/gimpmodule.c: export common object types via
	_PyGimp_API, and remove the PDBFunction_Type hack. Also define
	the common object structures here.

	* plug-ins/pygimp/pygimp.h: remove hack for Python < 2.3, since
	we require Python 2.3 now.

	* plug-ins/pygimp/gimpui.override
	* plug-ins/pygimp/gimpui.py: create and use specialized wrappers
	for get/set_active methods for GimpIntComboBox and derived types.
	Fixes #376102.

2006-11-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: applied patch from Aurimas Juška
	that fixes conversion with dithering of transparency (bug #358851).

2006-11-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppropwidgets.c (gimp_prop_color_button_new): typo.

2006-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff.c (load_image) (save_image): set the
	warning and error handlers after opening the file. We get two
	errors otherwise.

2006-11-27  Sven Neumann  <sven@gimp.org>

	* app/base/color-balance.c (color_balance_transfer_init): applied
	patch from Saul Goode (bug #379611), then cleaned up further.

2006-11-26  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (is_integer): Fix revealed
	bug in TinyScheme initialization which results in a seg fault.
	Removing fix for now.

2006-11-26  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (is_integer): Check cell
	type for T_NUMBER in addition to checking if it is an integer.
	Fixes TinyScheme bug #1593861 reported on SourceForge. Fixed
	prototype for dump_mark_stack(). Quieted compiler warnings.

	* plug-ins/script-fu/scripts/script-fu-compat.init: Added delq,
	prin1, and print.

2006-11-25  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrushclipboard.c
	* app/core/gimppatternclipboard.c
	* app/core/gimptooloptions.c
	* app/core/gimpundo.c