@@ -1,3 +1,13 @@
+2006-11-28  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/gimp.[ch]: removed gimp_foo_version variables.
+
+	* libgimpbase/gimpenv.[ch]: added them here.
+
+	* app/sanity.c: added sanity_check_gimp() and abort if the libgimp
+	version gimp is compiled with is not exactly the same we encounter
+	at runtime.
+
 2006-11-28  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/pygimp-api.h
